--- a/05/Objects/pro.build_log.htm
+++ b/05/Objects/pro.build_log.htm
@@ -21,15 +21,15 @@ Target DLL:      UL2CM3.DLL V1.160.12.0
 Dialog DLL:      TCM.DLL V1.35.1.0
  
 <h2>Project:</h2>
-C:\Users\bertz\Desktop\RTOS\04\pro.uvprojx
+C:\Users\bertz\Desktop\RTOS\05\pro.uvprojx
 Project File Date:  05/14/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling switch.c...
+compiling main.c...
 linking...
-Program Size: Code=824 RO-data=224 RW-data=36 ZI-data=12388  
+Program Size: Code=1132 RO-data=224 RW-data=56 ZI-data=16480  
 ".\Objects\pro.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -51,10 +51,10 @@ Package Vendor: ARM
    * Component: ARM::CMSIS:CORE:5.1.1
 
    * Component: ARM::Device:Startup:1.0.1
-      Include file:  Device\ARM\ARMCM3\Include\ARMCM3.h
-      Source file:   Device\ARM\ARMCM3\Source\system_ARMCM3.c
       Source file:   Device\ARM\ARMCM3\Source\ARM\startup_ARMCM3.s
-Build Time Elapsed:  00:00:01
+      Source file:   Device\ARM\ARMCM3\Source\system_ARMCM3.c
+      Include file:  Device\ARM\ARMCM3\Include\ARMCM3.h
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
