--- a/07/Objects/pro.build_log.htm
+++ b/07/Objects/pro.build_log.htm
@@ -21,15 +21,16 @@ Target DLL:      UL2CM3.DLL V1.160.12.0
 Dialog DLL:      TCM.DLL V1.35.1.0
  
 <h2>Project:</h2>
-C:\Users\bertz\Desktop\RTOS\06\pro.uvprojx
+C:\Users\bertz\Desktop\RTOS\07\pro.uvprojx
 Project File Date:  05/14/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling switch.c...
 compiling main.c...
 linking...
-Program Size: Code=1244 RO-data=224 RW-data=60 ZI-data=16484  
+Program Size: Code=1380 RO-data=224 RW-data=68 ZI-data=16484  
 ".\Objects\pro.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -54,7 +55,7 @@ Package Vendor: ARM
       Include file:  Device\ARM\ARMCM3\Include\ARMCM3.h
       Source file:   Device\ARM\ARMCM3\Source\ARM\startup_ARMCM3.s
       Source file:   Device\ARM\ARMCM3\Source\system_ARMCM3.c
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
